--- a/backend/backend/appsettings.json
+++ b/backend/backend/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "TodoConnection": "Server=localhost;Database=TodoDb;Trusted_Connection=True;TrustServerCertificate=true"
+  }
 }
